# opensast

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sast  LICENSE  README.md  SECURITY.md  need.md  pyproject.toml
.claude/sast/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
benchmark/: README.md  run_owasp_benchmark.py
docs/: USAGE.md  backlog-issues.md  benchmark-report-marqdex.md  benchmark-report-secopscode.md  benchmark-report.md  case-study-template.md  promotion-slides.md  quickstart.md  roadmap-claude-sast-platform.md  skill-vs-ci-comparison.md
examples/: README.md
scripts/: configure-sast-tools.sh
tests/: conftest.py  test_auth_chain.py  test_baseline.py  test_baseline_manager.py  test_ci_gate.py  test_codeql.py  test_compliance_report.py  test_corpus.py  test_corpus_report.py  test_dataflow_analyzer.py  test_finding_filters.py  test_fix_finding.py  test_github_integration.py  test_history.py  test_llm_analyzer.py  test_llm_findings_schema.py  test_llm_orchestrator.py  test_metrics_summary.py  test_normalize.py  test_owasp_benchmark.py  test_phpstan_integration.py  test_rbac_analyzer.py  test_redaction.py  test_report_writer.py  test_rules.py  test_run_semgrep.py  test_sarif_merge.py  test_sarif_schema.py  test_sast_runner.py  test_session_status.py  test_taint_tracker.py  test_tool_diagnostics.py  test_trend_analysis.py  test_triage_findings.py
(+187 files in other folders)
